syntax = "proto3";

option java_package = "com.issoft.rnd.proto";

message EchoRequest {
    string value = 1;
}

message EchoResponse {
    string value = 1;
}

service EchoService {
    rpc echo(EchoRequest) returns (EchoResponse);
}